# ScalePNGCairo

./: CMakeLists.txt  scale.cpp
